Scrollbars improved style. Sidenav scroll bars no longer doubling up

--- a/angular-client/src/app/app.component.css
+++ b/angular-client/src/app/app.component.css
@@ -1,6 +1,6 @@
 /* input color class */
 ::ng-deep input.mat-input-element {
-    color: aliceblue;
+  color: aliceblue;
 }
 
 /* disabled text color for input */
@@ -9,15 +9,29 @@
 }
 /* Change label color on no focus */
 ::ng-deep .mat-form-field .mat-form-field-label {
-    color: rgba(255,255,255,.5)
+  color: rgba(255,255,255,.5)
 }
 
 /* Change label color on focused */
 ::ng-deep .mat-form-field.mat-focused .mat-form-field-label {
-color: #673ab7
+  color: #673ab7
 }
   
 /* underline border color on focused */
 ::ng-deep .mat-focused .mat-form-field-underline .mat-form-field-ripple{
-background-color: #673ab7
+  background-color: #673ab7
+}
+
+/* All scrollbars will have this styling */
+::ng-deep ::-webkit-scrollbar {
+  width: 4px;
+  overflow-y: scroll;
+  background: grey;
+  box-shadow: inset 0 0 4px #707070;
+}
+
+/* All scrollbars will have this styling */
+::ng-deep ::-webkit-scrollbar-thumb {
+  background: #673ab7;
+  border-radius: 10px;
 }
