--- a/angular-client/src/app/components/home/home.component.css
+++ b/angular-client/src/app/components/home/home.component.css
@@ -37,6 +37,21 @@
   background-color: #212529;
 }
 
+/* 
+   Need to use ::ng-deep to get access to angular material applied class...use !important to override the last laye of css being applied.
+   This will override the overflow property to get rid of the double scroll bars...while still allowing for one
+*/
+::ng-deep .mat-drawer-inner-container {
+  overflow: visible !important;
+} 
+
+/* 
+   If i want to get rid of both scroll bars comment this css in and the above css out
+*/
+/* .mat-drawer-inner-container::-webkit-scrollbar {
+  display: none;
+} */
+
 .material-icons {
   vertical-align: middle;
   color:#673ab7;
@@ -59,4 +74,3 @@ table {
 th.mat-header-cell:first-of-type, td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type {
   padding-left: 0px;
 }
-
